Add posts in blog page and add borders to intructions steps

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,10 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
                 <div>
                     <h3>Get weather data, open a discussion or ticket, contact us</h3>
                     <p>
-                        Follow the simple steps below to keep organization and planning unified.
+                        Follow the simple steps below to keep organization and planning unified. asdfsdfsdfasd as sdf asdf sdf 
+                        sdfasdfasdfasdfsadfasdfasdfasdfasdfasdfas asdf
+                        sdfasdf
+                        as fasdfasdfasdfasdf sdfasdfasdfadfasdfadfadsfadsfasdfasdfadfadfadfadfads
                     </p>
                 </div>            
             </div>
@@ -23,44 +26,44 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12">
                 <h2 class="h2-titles">Weather Page</h2>
             </div>          
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 1</h3>
                 <p>Log in to send data to the database, otherwise you can only read weather data.</p>
                 <img class="instructions-image" src="static/images/instructions-log-in.PNG">
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 2</h3>
                 <p>Zoom to the area of interest in the map.</p>
                 <img class="instructions-image" src="static/images/instructions-map.PNG">
             </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 3</h3>
                 <p>Pick location on map where you want to get the weather data.</p>
                 <img class="instructions-image" src="static/images/instructions-map.PNG">
             </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 4</h3>
                 <p>Alternatively, enter the desired location coordiantes manually.</p>
                 <img class="instructions-image" src="static/images/instructions-manual-coordinates-1.PNG">
                 <img class="instructions-image" src="static/images/instructions-manual-coordinates-2.PNG">
                 <img class="instructions-image" src="static/images/instructions-manual-coordinates-3.PNG">
             </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 5</h3>
                 <p>Pres "Get the weather data."</p>
                 <img class="instructions-image" src="static/images/instructions-get-data.PNG">
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 6</h3>
                 <p>Pres "Send the weather data to the database. This option is disabled if you are not logged in."</p>
                 <img class="instructions-image" src="static/images/instructions-send-data.PNG">
             </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 7</h3>
                 <p>Visualize data selecting 5, 15 or all records. First set (left) accounts for wind data, second one (middle) for temperature. Select which two other parameters to show in third set (right).</p>
                 <img class="instructions-image" src="static/images/instructions-visualize-data.png">
             </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 8</h3>
                 <p>Inspect, analize data. They are saved in the database when sending the data.</p>
             </div>        
@@ -70,16 +73,16 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12">
                 <h2 class="h2-titles">Blog Page</h2>
             </div>          
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 1</h3>
                 <p>Log in to create a discussion or ticket, or to add comments to them. If not logged in, you can only read the blogs.</p>
                 <img class="instructions-image" src="static/images/instructions-log-in.PNG">
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 2</h3>
                 <p>Select the topic which your concern is related to.</p>
             </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 3</h3>
                 <p>Access last information and/or add comments until the ticket or discussion is closed.</p>
             </div>
@@ -89,12 +92,12 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="col-12">
                 <h2 class="h2-titles">Contact Page</h2>
             </div>          
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 1</h3>
                 <p>Log in to contact us.</p>
                 <img class="instructions-image" src="static/images/instructions-log-in.PNG">
             </div>
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 instruction-box">
                 <h3>Step 2</h3>
                 <p>Fill in your details and text you want to send.</p>
             </div>
