--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Code Institute Student Milestone Project 1">
+    <meta name="keywords" content="Seismic, geophysical, acquisition, processing,
+        crew, field, weather, technical support, database, wind, temperature,
+        Code Institute, software development, student, full-stack course,
+        milestone project">
     <title>Weather and Quality Control for Seismic Data Acquisition</title>
     <!-- Credit: Bootstrap
     Code copied on December 7th, 2021, 01:50 from Code Institute lessons
