--- a/templates/index.html
+++ b/templates/index.html
@@ -7,21 +7,22 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
 {% block content %}
     <!-- Instructions -->
     <div id="body-content" class="container">
+        <!-- Description of the Goal of the Sie -->
         <section id="instructions-title" class="row">
             <div class="col-12">            
                 <h1 class="h2-titles">Instructions to use this site</h1>
                 <div>
                     <h3>Get weather data, open a discussion or ticket, contact us</h3>
-                    <p>
-                        Follow the simple steps below to keep organization and planning unified. asdfsdfsdfasd as sdf asdf sdf 
-                        sdfasdfasdfasdfsadfasdfasdfasdfasdfasdfas asdf
-                        sdfasdf
-                        as fasdfasdfasdfasdf sdfasdfasdfadfasdfadfadsfadsfasdfasdfadfadfadfadfads
-                    </p>
+                    <p>This site is designed for planning the daily activities of a crew that works for seismic and/or other geophysical data acquisition.</p>
+                    <p>As weather conditions are important factors that have a direct impact on planning and costs, the idea of the website is to provide a tool to gather and analyse weather information, along with a blog with different topics to discuss usual issues found in this kind of work, in light of solving them in a centralised application, fact that is very valuable in crews with many workers, in remote locations.</p>
+                    <p>As wind and temperature might be the most important factors in terms of impact, they are show separately in two independents groups, with a third group with other weather information where the user can select what to get and analyse.</p>
+                    <p>Also, as remote locations might have difficulties for Internet connections (physical connections in early days, nowadays perhaps cost constraints only) and weather information might be compromised, at least the blog is intended to help on the resolution of issues in a centralised way, using a unique channel, factor that might be critical under usual conditions of work under presure where "noisy" communications are always unwanted.</p>
+                    <p>Additionally, an instructions page is given to help on the use of the site, and a contact page with a form where the user can send feedback if desired.</p>
                 </div>            
             </div>
         </section>
         <hr>
+        <!-- Instructions for Weather Page -->
         <section class="row">   
             <div class="col-12">
                 <h2 class="h2-titles">Weather Page</h2>
@@ -69,6 +70,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             </div>        
         </section>
         <hr>
+        <!-- Instructions for Blog Page -->
         <section class="row">   
             <div class="col-12">
                 <h2 class="h2-titles">Blog Page</h2>
@@ -88,6 +90,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             </div>
         </section>
         <hr>
+        <!-- Instructions for Contact Page -->
         <section class="row">   
             <div class="col-12">
                 <h2 class="h2-titles">Contact Page</h2>
