Correct date format in weather.js (it made no possible to write the DB), keep cleaning files

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -77,7 +77,7 @@
                     <div id="value-sunset" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div id="send-weather-data" class="col-12">   
                     {% if user.is_authenticated %}   
-                        <button id="send-weather-data-button" type="submit">Send Data</button>
+                        <button id="send-weather-data-button" type="submit">Send Data to DB</button>
                     {% else %}
                     <p>(Log in to send data to database)</p>
                     {% endif %}
